CHANGES
=======


0.7.1

task/resolve_service_name_for_service_user_service_role
task/refactor_flow_ensure_service_name
fix/attributes_module_iot_subscription


0.7.0

task/remove_link_after_uninstall
fix/api_schema_validation
task/check_user_before_get_token
task/start_service_after_install_rpm
task/apiary_typo_type_parameter
task/handle_errors_register_service
task/identify_flow_traces
task/remove_cygnus_moduleiot
task/apiary_examples


0.6.10

task/att_timeout_as_string
task/fix_ca_geolocation_endpoint


0.6.9

bug/resolve_service_subservice_name_rsubservice_role_assignment
bug/list_activated_iotmodules_by_admin_domain_user
bug/delete_subservice_admin_domain_user
bug/resolve_domain_name_role_assignments_as_cloudadmin
task/rpm_reuse_config
bug/role_assignment_api_not_realise_subservice_id
task/resolve_domain_name_role_assignment
task/script_set_all_service_role_policies
task/create_service_customer_role_at_new_service


0.6.8

bug/delete_service_wrong_code


0.6.7

task/remove_old_stuff_ckan_conf


0.6.6

task/unregister_iota_response


0.6.5

task/orion_get_device_list_fields


0.6.4

task/iota_get_device_list_fields


0.6.3

task/subscribe_ca_before_register_service_entity


0.6.2

task/recover_if_keypass_not_found
task/bb_sync_request_internal_id


0.6.1

task/remove_subscriptions_at_remove_service


0.6.0

task/manage_module_activation
feature/subservice_create_automation
bug/delete_subservice_by_cloud_admin
bug/use_params_url_in_role_assignment


0.5.1

subscriptions instead of register context for IOTA handling
feature/OIOTP-81_orchestrator_kpis
bug/remove_service_without_iota
bug/get_enpoints_from_config_not_default
bug/use_service_name_without_resolve_it
bug/apiary_doc
bug/iccid_entity_attribute
bug/empty_orion_attribute


0.5.0

task/keypass_policies
task/scim_2_support
task/log_format_change: add operation name to each trace and add banner version
task/orion_and_iota_suppor_for_register_device_and_entity_service


0.4.9
